добавлена структура работы

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
   <div class="page">
-
+    <div class="content">
+      <section class="description"></section>
+      <section class="digits"></section>
+      <section class="feynman"></section>
+      <section class="kaufman"></section>
+    </div>
+    <footer class="footer"></footer>
   </div>
 </body>
 </html>
