--- a/index.html
+++ b/index.html
@@ -4,16 +4,166 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="file:///Users/olgadavlud/Desktop/Praktikum/first-project/first-project/style.css">
 </head>
 <body>
   <div class="page">
-    <div class="content">
-      <section class="description"></section>
-      <section class="digits"></section>
-      <section class="feynman"></section>
-      <section class="kaufman"></section>
-    </div>
-    <footer class="footer"></footer>
+    <header class="header">
+        <img  class="logo header__logo" src="file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__subtitle">Какие современные и эффективные подходы к обучения вы можете использовать в своей жизни?
+            <a class="header__link" href="#">Узнать →</a>
+        </p>
+        <img class="header__main-illustration" src="file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/two_again.png" alt="Картина Федеора Решетникова 'Опять двойка'">
+        <div class="header__square-pic"></div>
+    </header>
+    <main class="main">
+      <section class="two-columns">
+        <h5 class="two-columns__brief">Главные проблемы в обучении</h5>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraf">
+            Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы
+            готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи,
+            чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка
+            быстро выветривается и не приносит пользы.
+          </p>
+          <p class="two-columns__paragraf">
+            <span class="two-columns__span-accent">Вывод:</span>
+            учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+          </p>
+          <p class="two-columns__paragraf">
+            Конкретные техники и упражнения помогают изменить подход к обучению, сделать его
+            эффективным и захватывающим. Эти же техники применяются на примере обучения в 
+            Практикуме.
+          </p>
+        </div>
+      </section>
+      <section class="digits">
+        <h2 class="section-title">Цифры и фаткы</h2>
+        <h4 class="section-subtitle">Про учёбу и мозг</h4>
+          <ul class="table">
+            <li class="table__cell">
+              <h3 class="table__heading">86 миллиардов</h3>
+              <p class="table__text">Число нейронов в мозге человека</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">2,1 миллиарда</h3>
+              <p class="table__text">Число нуждающихся в повышении квалификации</p>
+              <p class="table__text_bank">Всемирный Банк, 2017</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">1000 терабайт</h3>
+              <p class="table__text">Объём памяти человека</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">500 триллионов</h3>
+              <p class="table__text">Число ответсвенных за обучение нервных синапсов у взрослого человека</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">420 миллионов</h3>
+              <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+              <p class="table__text_bank">Всемирный Банк, 2017</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">17-20 лет</h3>
+              <p class="table__text">Пик обучаемости</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">1885 год</h3>
+              <p class="table__text">Открытие кривой забывания</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">1889 год</h3>
+              <p class="table__text">Открытие условного рефлекса</p>
+            </li>
+          </ul>
+      </section>
+      <section class="feynman" title="Автор методики - Фейман">
+        <h2 class="feynman__title">Метод Феймана</h2>
+        <h4 class="feynman__subtitle">Выучить и не забыть.</h4>
+        <a class="link" href="#">Подробнее →</a>
+      </section>
+      <section class="kaufman">
+        <h2 class="section-title_theme_dark">Принципы обучения</h2>
+        <h4 class="section-subtitle_theme_dark">от Джоша Кауфмана</h4>
+        <ul class="table_theme_dark">
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">1</h3>
+            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">2</h3>
+            <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">3</h3>
+            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">4</h3>
+            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">5</h3>
+            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">6</h3>
+            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">7</h3>
+            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">8</h3>
+            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">9</h3>
+            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">10</h3>
+            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
+        <img class="kaufman__triangle" src="file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/kaufman-triangle.svg" alt="Синий треугольник">
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <img class="logo_place_footer" src="file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
+          <p class="footer__author">© Давлюд Ольга</p>
+        </div>
+        <div class="footer__column footer__column_content_info">
+          <p class="footer__column-headling">О Практикуме</p>
+          <nav class="footer__column-links">            
+              <a class="footer__column-link" href="#">Главная</a>
+              <a class="footer__column-link" href="#">Концепция</a>
+              <a class="footer__column-link" href="#">Наставники</a>            
+          </nav>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <p class="footer__column-headling">Соцсети</p>          
+            <ul class="footer__column-links">
+              <li><a class="footer__column-link" href="#">
+                <img class="footer__social-icon" src="file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/facebook_color_white.svg" alt="иконка Facebook">
+                Facebook</a>
+              </li>
+              <li><a class="footer__column-link" href="#">
+                <img class="footer__social-icon" src="file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/vk_color_white.svg" alt="иконка ВКонтакте">
+                ВКонтакте</a>
+              </li>
+              <li><a class="footer__column-link" href="#">
+                <img class="footer__social-icon" src="file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/instagram_color_white.svg" alt="иконка Instagram">
+                Instagram</a>
+              </li>
+            </ul>          
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
