Поправлены пути к файлам стиля и картинкам

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="file:///Users/olgadavlud/Desktop/Praktikum/first-project/styles/style.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
     <header class="header">
-        <img  class="logo header__logo" src="file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
+        <img  class="logo header__logo" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы к обучения вы можете использовать в своей жизни?
             <a class="header__link" href="#">Узнать →</a>
         </p>
-        <img class="header__main-illustration" src="file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/two_again.png" alt="Картина Федеора Решетникова 'Опять двойка'">
+        <img class="header__main-illustration" src="./images/header-image.png" alt="Картина Федеора Решетникова 'Опять двойка'">
         <div class="header__square-pic"></div>
     </header>
     <main class="main">
@@ -128,13 +128,13 @@
             <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img class="kaufman__triangle" src="file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/kaufman-triangle.svg" alt="Синий треугольник">
+        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Синий треугольник">
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
-          <img class="logo_place_footer" src="file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
+          <img class="logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
           <p class="footer__author">© Давлюд Ольга</p>
         </div>
         <div class="footer__column footer__column_content_info">
@@ -149,15 +149,15 @@
           <p class="footer__column-headling">Соцсети</p>          
             <ul class="footer__column-links">
               <li><a class="footer__column-link" href="#">
-                <img class="footer__social-icon" src="file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/facebook_color_white.svg" alt="иконка Facebook">
+                <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка Facebook">
                 Facebook</a>
               </li>
               <li><a class="footer__column-link" href="#">
-                <img class="footer__social-icon" src="file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/vk_color_white.svg" alt="иконка ВКонтакте">
+                <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">
                 ВКонтакте</a>
               </li>
               <li><a class="footer__column-link" href="#">
-                <img class="footer__social-icon" src="file:///Users/olgadavlud/Desktop/Praktikum/sprint-1__startkit/images/instagram_color_white.svg" alt="иконка Instagram">
+                <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка Instagram">
                 Instagram</a>
               </li>
             </ul>          
