--- a/index.html
+++ b/index.html
@@ -44,40 +44,40 @@
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-        <ul class="cards">
-          <li class="cards__item">
-            <img class="cards__image" src="./images/cards-attention.png" alt="Изображение книги '101 essays that will change the way you think'">
-            <h3 class="cards__title">Два вида внимания</h3>
-            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
-          </li>
-          <li class="cards__item">
-            <img class="cards__image" src="./images/cards-recall.png" alt="Изображение статуи">
-            <h3 class="cards__title">Recall</h3>
-            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
-          </li>
-          <li class="cards__item">
-            <img class="cards__image" src="./images/cards-interliving.png" alt="Изображение большого зала">
-            <h3 class="cards__title">Интерливинг</h3>
-            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
-          </li>
-          <li class="cards__item">
-            <img class="cards__image" src="./images/cards-question.png" alt="Изображение одного человека в пустом помещении с множеством окон">
-            <h3 class="cards__title">Вопросы</h3>
-            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
-          </li>
-          <li class="cards__item">
-            <img class="cards__image" src="./images/cards-competence.png" alt="Изображение стопки разных книг">
-            <h3 class="cards__title">Иллюзия компетентности</h3>
-            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
-          </li>
-        </ul>
+          <ul class="cards">
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-attention.png" alt="Изображение книги '101 essays that will change the way you think'">
+              <h3 class="cards__title">Два вида внимания</h3>
+              <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+            </li>
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-recall.png" alt="Изображение статуи">
+              <h3 class="cards__title">Recall</h3>
+              <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+            </li>
+            <li class="cards__item">
+             <img class="cards__image" src="./images/cards-interliving.png" alt="Изображение большого зала">
+              <h3 class="cards__title">Интерливинг</h3>
+              <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+            </li>
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-question.png" alt="Изображение одного человека в пустом помещении с множеством окон">
+              <h3 class="cards__title">Вопросы</h3>
+              <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+            </li>
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-competence.png" alt="Изображение стопки разных книг">
+              <h3 class="cards__title">Иллюзия компетентности</h3>
+              <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+            </li>
+          </ul>
       </section>
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <div class="video__iframe"></div>
-          <div class="video__iframe"></div>
+          <iframe class="video__iframe" src="https://www.youtube.com/watch?v=arj7oStGLkU"></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/watch?v=5MgBikgcWnY"></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -205,7 +205,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <!-- логотипы -->
+          <a class="resources__logo" href="#"><img src="./images/logo/resources-arzamas.svg" alt="логотип Arzamas"></a> 
+          <a class="resources__logo" href="#"><img src="./images/logo/resources-n1.svg" alt="логотип N1"></a> 
+          <a class="resources__logo" href="#"><img src="./images/logo/resources-strelka.svg" alt="логотип Strelka"></a> 
+          <a class="resources__logo" href="#"><img src="./images/logo/resources-polka.svg" alt="логотип Полка"></a> 
         </div>
       </section>
     </main>
