Добавлены классы для анимаци

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <img  class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы к обучения вы можете использовать в своей жизни?
-            <a class="header__link" href="#">Узнать →</a>
+            <a class="header__link link_opacity" href="#">Узнать →</a>
         </p>
         <img class="header__main-illustration" src="./images/header-image.png" alt="Картина Федеора Решетникова 'Опять двойка'">
-        <div class="header__square-pic"></div>
+        <div class="header__square-pic rotation"></div>
     </header>
     <main class="main">
       <section class="description">
@@ -76,8 +76,8 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" src="https://www.youtube.com/watch?v=arj7oStGLkU"></iframe>
-          <iframe class="video__iframe" src="https://www.youtube.com/watch?v=5MgBikgcWnY"></iframe>
+          <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -97,7 +97,7 @@
       <section class="feynman" title="Автор методики - Фейман">
         <h2 class="feynman__title">Метод Феймана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="feynman__link" href="#">Подробнее →</a>
+        <a class="feynman__link link_opacity" href="#">Подробнее →</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и фаткы</h2>
@@ -150,7 +150,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="book-pic" src="./images/khan-book.jpg" alt="Изображение книги 'Весь мир - школа' автор Салман Хан">
-            <a class="khan__buy-link" href="#">Купить книгу →</a>
+            <a class="khan__buy-link link_opacity" href="#">Купить книгу →</a>
           </div>
         </div>
       </section>
@@ -199,7 +199,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle" title="Синий треугольник"></div>
+        <div class="kaufman__triangle rotation" title="Синий треугольник"></div>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
@@ -221,23 +221,23 @@
         <div class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <nav class="footer__column-links">            
-              <a class="footer__column-link" href="#">Главная</a>
-              <a class="footer__column-link" href="#">Концепция</a>
-              <a class="footer__column-link" href="#">Наставники</a>            
+              <a class="footer__column-link link_opacity" href="#">Главная</a>
+              <a class="footer__column-link link_opacity" href="#">Концепция</a>
+              <a class="footer__column-link link_opacity" href="#">Наставники</a>            
           </nav>
         </div>
         <div class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>          
             <ul class="footer__column-links">
-              <li><a class="footer__column-link" href="#">
+              <li><a class="footer__column-link link_opacity" href="#">
                 <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка Facebook">
                 Facebook</a>
               </li>
-              <li><a class="footer__column-link" href="#">
+              <li><a class="footer__column-link link_opacity" href="#">
                 <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">
                 ВКонтакте</a>
               </li>
-              <li><a class="footer__column-link" href="#">
+              <li><a class="footer__column-link link_opacity" href="#">
                 <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка Instagram">
                 Instagram</a>
               </li>
