--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="book-pic" src="./images/khan-book.jpg" alt="Изображение книги 'Весь мир - школа' автор Салман Хан">
+            <div class="book-pic" title="Изображение книги 'Весь мир - школа' автор Салман Хан"></div>
             <a class="khan__buy-link link_opacity" href="#">Купить книгу →</a>
           </div>
         </div>
@@ -205,10 +205,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a class="resources__logo" href="#"><img src="./images/logo/resources-arzamas.svg" alt="логотип Arzamas"></a> 
-          <a class="resources__logo" href="#"><img src="./images/logo/resources-n1.svg" alt="логотип N1"></a> 
-          <a class="resources__logo" href="#"><img src="./images/logo/resources-strelka.svg" alt="логотип Strelka"></a> 
-          <a class="resources__logo" href="#"><img src="./images/logo/resources-polka.svg" alt="логотип Полка"></a> 
+          <a class="resources__logo link_opacity" href="#"><img src="./images/logo/resources-arzamas.svg" alt="логотип Arzamas"></a> 
+          <a class="resources__logo link_opacity" href="#"><img src="./images/logo/resources-n1.svg" alt="логотип N1"></a> 
+          <a class="resources__logo link_opacity" href="#"><img src="./images/logo/resources-strelka.svg" alt="логотип Strelka"></a> 
+          <a class="resources__logo link_opacity" href="#"><img src="./images/logo/resources-polka.svg" alt="логотип Полка"></a> 
         </div>
       </section>
     </main>
