Исправлены названия классов

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img  class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы к обучения вы можете использовать в своей жизни?
-            <a class="header__link link_opacity" href="#">Узнать →</a>
+            <a class="header__link opacity" href="#">Узнать →</a>
         </p>
         <img class="header__main-illustration" src="./images/header-image.png" alt="Картина Федеора Решетникова 'Опять двойка'">
         <div class="header__square-pic rotation"></div>
@@ -76,8 +76,8 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -97,7 +97,7 @@
       <section class="feynman" title="Автор методики - Фейман">
         <h2 class="feynman__title">Метод Феймана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="feynman__link link_opacity" href="#">Подробнее →</a>
+        <a class="feynman__link opacity" href="#">Подробнее →</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и фаткы</h2>
@@ -150,7 +150,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <div class="book-pic" title="Изображение книги 'Весь мир - школа' автор Салман Хан"></div>
-            <a class="khan__buy-link link_opacity" href="#">Купить книгу →</a>
+            <a class="khan__buy-link opacity" href="#">Купить книгу →</a>
           </div>
         </div>
       </section>
@@ -205,10 +205,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a class="resources__logo link_opacity" href="#"><img src="./images/logo/resources-arzamas.svg" alt="логотип Arzamas"></a> 
-          <a class="resources__logo link_opacity" href="#"><img src="./images/logo/resources-n1.svg" alt="логотип N1"></a> 
-          <a class="resources__logo link_opacity" href="#"><img src="./images/logo/resources-strelka.svg" alt="логотип Strelka"></a> 
-          <a class="resources__logo link_opacity" href="#"><img src="./images/logo/resources-polka.svg" alt="логотип Полка"></a> 
+          <a class="resources__logo opacity" href="#"><img src="./images/logo/resources-arzamas.svg" alt="логотип Arzamas"></a> 
+          <a class="resources__logo opacity" href="#"><img src="./images/logo/resources-n1.svg" alt="логотип N1"></a> 
+          <a class="resources__logo opacity" href="#"><img src="./images/logo/resources-strelka.svg" alt="логотип Strelka"></a> 
+          <a class="resources__logo opacity" href="#"><img src="./images/logo/resources-polka.svg" alt="логотип Полка"></a> 
         </div>
       </section>
     </main>
@@ -221,23 +221,23 @@
         <div class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <nav class="footer__column-links">            
-              <a class="footer__column-link link_opacity" href="#">Главная</a>
-              <a class="footer__column-link link_opacity" href="#">Концепция</a>
-              <a class="footer__column-link link_opacity" href="#">Наставники</a>            
+              <a class="footer__column-link opacity" href="#">Главная</a>
+              <a class="footer__column-link opacity" href="#">Концепция</a>
+              <a class="footer__column-link opacity" href="#">Наставники</a>            
           </nav>
         </div>
         <div class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>          
             <ul class="footer__column-links">
-              <li><a class="footer__column-link link_opacity" href="#">
+              <li><a class="footer__column-link opacity" href="#">
                 <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка Facebook">
                 Facebook</a>
               </li>
-              <li><a class="footer__column-link link_opacity" href="#">
+              <li><a class="footer__column-link opacity" href="#">
                 <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">
                 ВКонтакте</a>
               </li>
-              <li><a class="footer__column-link link_opacity" href="#">
+              <li><a class="footer__column-link opacity" href="#">
                 <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка Instagram">
                 Instagram</a>
               </li>
