Создан файл стилей по БЭМ и подключен к странице

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./index.css">
 </head>
 <body>
   <div class="page">
@@ -149,7 +148,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <div class="book-pic" title="Изображение книги 'Весь мир - школа' автор Салман Хан"></div>
+            <div class="khan__book-pic" title="Изображение книги 'Весь мир - школа' автор Салман Хан"></div>
             <a class="khan__buy-link opacity" href="#">Купить книгу →</a>
           </div>
         </div>
