--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
         <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
-            <p class="two-columns__paragraf">
+            <p class="two-columns__paragraph">
             Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы
             готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи,
             чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка
             быстро выветривается и не приносит пользы.
             </p>
-            <p class="two-columns__paragraf">
+            <p class="two-columns__paragraph">
             <span class="two-columns__span-accent">Вывод:</span>
             учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
             </p>
-            <p class="two-columns__paragraf">
+            <p class="two-columns__paragraph">
             Конкретные техники и упражнения помогают изменить подход к обучению, сделать его
             эффективным и захватывающим. Эти же техники применяются на примере обучения в 
             Практикуме.
@@ -83,7 +83,7 @@
         <article class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
-            <p class="two-columns__paragraf">
+            <p class="two-columns__paragraph">
               С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко
               не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её
               выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара
@@ -142,13 +142,15 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу
-            «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут
-            получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-          <p class="khan__quote-author">Джордж Лукас</p>
+          <blockquote>
+            <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу
+              «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут
+              получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          </blockquote>
+          <h3 class="khan__quote-author">Джордж Лукас</h3>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <div class="khan__book-pic" title="Изображение книги 'Весь мир - школа' автор Салман Хан"></div>
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Изображение книги 'Весь мир - школа' автор Салман Хан">
             <a class="khan__buy-link opacity" href="#">Купить книгу →</a>
           </div>
         </div>
@@ -204,10 +206,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a class="resources__logo opacity" href="#"><img src="./images/logo/resources-arzamas.svg" alt="логотип Arzamas"></a> 
-          <a class="resources__logo opacity" href="#"><img src="./images/logo/resources-n1.svg" alt="логотип N1"></a> 
-          <a class="resources__logo opacity" href="#"><img src="./images/logo/resources-strelka.svg" alt="логотип Strelka"></a> 
-          <a class="resources__logo opacity" href="#"><img src="./images/logo/resources-polka.svg" alt="логотип Полка"></a> 
+          <a class="opacity" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="логотип Arzamas"></a> 
+          <a class="opacity" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="логотип N1"></a> 
+          <a class="opacity" href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="логотип Strelka"></a> 
+          <a class="opacity" href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="логотип Полка"></a> 
         </div>
       </section>
     </main>
