--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="page">
     <header class="header">
-        <img  class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
+        <img  class="logo logo-place__header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы к обучения вы можете использовать в своей жизни?
             <a class="header__link opacity" href="#">Узнать →</a>
@@ -41,8 +41,8 @@
         </article>
       </section>
       <section class="techniques">
-        <h2 class="section-title">Техники обучения</h2>
-        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <h2 class="section__title">Техники обучения</h2>
+        <p class="section__subtitle">Пять практик от Барбары Оакли</p>
           <ul class="cards">
             <li class="cards__item">
               <img class="cards__image" src="./images/cards-attention.png" alt="Изображение книги '101 essays that will change the way you think'">
@@ -72,8 +72,8 @@
           </ul>
       </section>
       <section class="video">
-        <h2 class="section-title">Видео нa TED</h2>
-        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <h2 class="section__title">Видео нa TED</h2>
+        <p class="section__subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -99,8 +99,8 @@
         <a class="feynman__link opacity" href="#">Подробнее →</a>
       </section>
       <section class="digits">
-        <h2 class="section-title">Цифры и фаткы</h2>
-        <p class="section-subtitle">Про учёбу и мозг</p>
+        <h2 class="section__title">Цифры и фаткы</h2>
+        <p class="section__subtitle">Про учёбу и мозг</p>
           <ul class="table">
             <li class="table__cell">
               <h3 class="table__heading">86 миллиардов</h3>
@@ -156,55 +156,55 @@
         </div>
       </section>
       <section class="kaufman">
-        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <ul class="table table_theme_dark">
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">1</h3>
-            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+        <h2 class="section__title section-__title-theme-dark">Принципы обучения</h2>
+        <p class="section__subtitle section__subtitle-theme-dark">от Джоша Кауфмана</p>
+        <ul class="table table-theme-dark">
+          <li class="table__cell table__cell-theme-dark">
+            <h3 class="table__heading table__heading-theme-dark">1</h3>
+            <p class="table__text table__text-theme-dark">Выберите привлекательный проект.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">2</h3>
-            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          <li class="table__cell table__cell-theme-dark">
+            <h3 class="table__heading table__heading-theme-dark">2</h3>
+            <p class="table__text table__text-theme-dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">3</h3>
-            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          <li class="table__cell table__cell-theme-dark">
+            <h3 class="table__heading table__heading-theme-dark">3</h3>
+            <p class="table__text table__text-theme-dark">Определите целевой уровень мастерства.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">4</h3>
-            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          <li class="table__cell table__cell-theme-dark">
+            <h3 class="table__heading table__heading-theme-dark">4</h3>
+            <p class="table__text table__text-theme-dark">Разбейте навык на элементы.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">5</h3>
-            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          <li class="table__cell table__cell-theme-dark">
+            <h3 class="table__heading table__heading-theme-dark">5</h3>
+            <p class="table__text table__text-theme-dark">Приготовьте всё необходимое для занятий.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">6</h3>
-            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          <li class="table__cell table__cell-theme-dark">
+            <h3 class="table__heading table__heading-theme-dark">6</h3>
+            <p class="table__text table__text-theme-dark">Устраните препятствия для занятий.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">7</h3>
-            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          <li class="table__cell table__cell-theme-dark">
+            <h3 class="table__heading table__heading-theme-dark">7</h3>
+            <p class="table__text table__text-theme-dark">Выделите специальное время для занятий.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">8</h3>
-            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          <li class="table__cell table__cell-theme-dark">
+            <h3 class="table__heading table__heading-theme-dark">8</h3>
+            <p class="table__text table__text-theme-dark">Создайте быстрые петли обратной связи.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">9</h3>
-            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          <li class="table__cell table__cell-theme-dark">
+            <h3 class="table__heading table__heading-theme-dark">9</h3>
+            <p class="table__text table__text-theme-dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">10</h3>
-            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          <li class="table__cell table__cell-theme-dark">
+            <h3 class="table__heading table__heading-theme-dark">10</h3>
+            <p class="table__text table__text-theme-dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
         <div class="kaufman__triangle rotation" title="Синий треугольник"></div>
       </section>
       <section class="resources">
-        <h2 class="section-title">Полезные ресурсы</h2>
-        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <h2 class="section__title">Полезные ресурсы</h2>
+        <p class="section__subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
           <a class="opacity" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="логотип Arzamas"></a>
           <a class="opacity" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="логотип N1"></a>
@@ -215,11 +215,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column footer__column_content_copyright">
-          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
+        <div class="footer__column footer__column-content-copyright">
+          <img class="logo logo-place__footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
           <p class="footer__author">© Давлюд Ольга</p>
         </div>
-        <div class="footer__column footer__column_content_info">
+        <div class="footer__column footer__column-content-info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <nav class="footer__column-links">
               <a class="footer__column-link opacity" href="#">Главная</a>
@@ -227,7 +227,7 @@
               <a class="footer__column-link opacity" href="#">Наставники</a>
           </nav>
         </div>
-        <div class="footer__column footer__column_content_social">
+        <div class="footer__column footer__column-content-social">
           <h4 class="footer__column-heading">Соцсети</h4>
             <ul class="footer__column-links">
               <li><a class="footer__column-link opacity" href="#">
